Fri Mar 11 12:09:00 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_pwd.h:
        * ace/OS_NS_pwd.inl:
          Rewrote getpwnam_r(). Changed API to conform POSIX.
          Fixes Bug #3952.

        * ace/config-aix-5.x.h:
        * ace/config-cygwin32.h:
        * ace/config-freebsd.h:
        * ace/config-hpux-11.00.h:
        * ace/config-kfreebsd.h:
        * ace/config-linux.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-openvms.h:
        * ace/config-rtems.h:
        * ace/config-sunos5.5.h:
        * ace/config-win32-interix.h:
          Config changes due getpwnam_r() rewrite and API change.

        * tests/OS_Test.cpp:
          Added atest for getpwnam_r().

Thu Mar 10 16:42:30 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/fuzz.pl:
          Fix the test so it correctly ignores OS.h when explicitly disabled.

Thu Mar 10 16:42:09 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/ace.mpc: Add OS.h to the Headers to be installed. Thanks to
          Phil Mesnier for pointing this out.

Thu Mar 10 11:41:15 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MEM_Stream_Test.cpp:
          Fixed printf warning on MinGW.

Thu Mar 10 11:04:08 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * include/makeinclude/platform_linux_suncc.GNU:
          Sun Studio related updates.

Thu Mar 10 10:37:44 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/OS_NS_netdb.inl:
        * ace/Stack_Trace.cpp:
          Fixed warnings on VxWorks.

        * ace/ACE.cpp:
          Added a cast for a type that is expected by printf to be long.

        * examples/Timer_Queue/Custom_Handler.cpp:
        * examples/Timer_Queue/Thread_Timer_Queue_Test.cpp:
          Added casts for arguments to printf as it expects unsigned long.

Thu Mar 10 08:29:30 UTC 2011  Olli Savia  <ops@iki.fi>
